# llm-music-expression

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
docs/: RUNPOD.md  app.js  audio.html  index.html  judge.html  literature-review.md  observations.md  results.html  style.css
docs/analysis/: bach_reference.json  instrument_idf.json  judge.csv  judge_allmodels.csv  judge_allmodels.prefix.csv  judge_allmodels_raw.json  judge_audio_llm.json  judge_noted.csv  judge_noted_raw.json  judge_raw.json  key_distribution.json  music2emo.json  music2emo_embeddings.npz  music2emo_full.json  rejudge_gemini_ckpt.json  self_judge.json
docs/data/: index.json
docs/validation/: listen.html  rate.html
prompts/: form_instructions.csv  freeform.md  prompt.md  toolkit.md
prompts/constraints/: fugue.md  string-quartet.md
scripts/: build_instrument_idf.py  build_key_distribution.py  build_listen.py  build_validation.py  judge_audio_llm.py  judge_matrix.py  preseed_judge_ckpt.py  rebake_abc_audio.py  rebake_audio.py  rejudge_gemini.py  render_missing_audio.py  resume_batch.py  resume_failures.py  runpod_run.sh  runpod_setup.sh  score_validation.py  self_bias_by_trait.py  self_judge.py  self_preference.py  serve.py  setup_soundfont.sh
src/llm_music/: __init__.py  _sandbox_runner.py  analyze.py  audio_report.py  cli.py  config.py  generate.py  judge.py  judge_report.py  render.py  report.py  sandbox.py  store.py
tests/: test_abc.py  test_prompts.py  test_registry.py  test_render.py  test_retry.py
tests/fixtures/: abc_repeat_fail.abc
(+147 files in other folders)
