[project]
name = "llm-music-expression"
version = "0.1.0"
description = "How do LLMs express themselves musically? A rebuild of sara-fish/llm-musical-self-expression with live Verovio engraving, two generation modes, and a pluggable model registry."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "music21>=9.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "muspy>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
llm-music = "llm_music.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_music"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
